[gd_scene load_steps=6 format=3 uid="uid://rq382y6yiwho"]

[ext_resource type="Script" path="res://backend/character_selection_script.gd" id="1_4q0c5"]
[ext_resource type="Texture2D" uid="uid://j8rxwog8xbei" path="res://frontend/props/choose_character_background.png" id="2_gr3fo"]
[ext_resource type="PackedScene" uid="uid://ct7kbr3auo4a7" path="res://frontend/character_holder.tscn" id="3_tl103"]
[ext_resource type="Script" path="res://backend/character_classes/archer_class.gd" id="4_i2b4m"]
[ext_resource type="Script" path="res://backend/character_classes/soldier_class.gd" id="5_yjwi0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4q0c5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(581, 330)
scale = Vector2(0.804678, 0.804678)
texture = ExtResource("2_gr3fo")

[node name="Button" type="Button" parent="."]
offset_left = 579.0
offset_top = 115.0
offset_right = 602.0
offset_bottom = 146.0
scale = Vector2(1.54781, 1.54781)
text = "â­¯"

[node name="Character1Holder" parent="." instance=ExtResource("3_tl103")]

[node name="Character2Holder" parent="." instance=ExtResource("3_tl103")]
offset_left = 418.0
offset_right = 458.0

[node name="ArcherClass" type="Node2D" parent="."]
script = ExtResource("4_i2b4m")

[node name="SoldierClass" type="Node2D" parent="."]
script = ExtResource("5_yjwi0")

[connection signal="pressed" from="Button" to="." method="_on_refresh_pressed"]
